# MasterPiece.SDL

./: .clang-format  Makefile  README.md  game.h  main.cpp  mx.h
code/: CMakeLists.txt  Makefile  Makefile.em  MasterPiece.SDL  game.h  index.html  main.cpp  mx.h  theheader.h
wasm_port/: Makefile  MasterPiece.data  MasterPiece.html  MasterPiece.js  MasterPiece.wasm  game.h  main.cpp  mx.h  theheader.h
