cmake_minimum_required(VERSION 3.10)
project(MasterPiece_SDL)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
file(GLOB SOURCES "*.cpp")
add_executable(MasterPiece ${SOURCES})
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS})
target_link_libraries(MasterPiece ${SDL2_LIBRARIES} SDL2_ttf::SDL2_ttf)
set_property(DIRECTORY PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_BINARY_DIR}/${PROJECT_NAME}")
